# ppx_forbid

./: .ocamlformat  .ppx_forbid  README.md  dune-project  ppx_enforce.opam  ppx_forbid.opam
.github/workflows/: ci.yml
src/: dune  ppx_enforce.ml  ppx_forbid.ml
test/: .ppx_enforce  dune  test_allowed.ml  test_enforce_exempt.ml  test_enforce_present.ml
test/lwt/: .ppx_forbid  allowed.ml  dune  nested_only.ml  resolved_good.ml  unresolved_bad.ml
